converted to express

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
   <title>NBA Game Predictor</title>
   <link rel="stylesheet" href="style.css">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 
 <body>
 	<!-- External Script for perceptron functionality -->
-	<script src="scripts.js"></script>
+	<script src="../scripts.js"></script>
 
 	<div id="title">
 		<h1>NBA Game Predictor</h1>
