Team dropdowns now populated at window load. Still need to fix seasons dropdowns and connect to perceptron.

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 		</select><br><br>
 		Team 1:
 		<select id="team1">
-			<option value="Atlanta Hawks">Atlanta Hawks</option>
+			<!--<option value="Atlanta Hawks">Atlanta Hawks</option>
 			<option value="Boston Celtics">Boston Celtics</option>
 			<option value="Brooklyn Nets">Brooklyn Nets</option>
 			<option value="Charlotte Hornets">Charlotte Hornets</option>
@@ -56,11 +56,11 @@
 			<option value="San Antonio Spurs">San Antonio Spurs</option>
 			<option value="Toronto Raptors">Toronto Raptors</option>
 			<option value="Utah Jazz">Utah Jazz</option>
-			<option value="Washington Wizards">Washington Wizards</option>
+			<option value="Washington Wizards">Washington Wizards</option>-->
 		</select>
 		Team 2:
 		<select id="team2">
-			<option value="Atlanta Hawks">Atlanta Hawks</option>
+			<!--<option value="Atlanta Hawks">Atlanta Hawks</option>
 			<option value="Boston Celtics">Boston Celtics</option>
 			<option value="Brooklyn Nets">Brooklyn Nets</option>
 			<option value="Charlotte Hornets">Charlotte Hornets</option>
@@ -89,7 +89,7 @@
 			<option value="San Antonio Spurs">San Antonio Spurs</option>
 			<option value="Toronto Raptors">Toronto Raptors</option>
 			<option value="Utah Jazz">Utah Jazz</option>
-			<option value="Washington Wizards">Washington Wizards</option>
+			<option value="Washington Wizards">Washington Wizards</option>-->
 		</select><br><br>
 		<button type="button" id = "forecast" onclick="readInput()" disabled>Forecast</button>
 	</form>
