Added section to show computed weights. Changed styling of the page in general

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
 		<h1>NBA Game Predictor</h1>
 	</div>
 
+	<div id = "weight_table">
+		<h3>Computed Weights</h3>
+	</div>
+	
+	<div id = 'form_content'>
 	<form>
 		Train with Season:
 		<select id="train_season">
@@ -98,7 +103,7 @@
 
 	<div id='prediction_loader'></div>
 	<div id="prediction"></div>
-
+	</div>
 	<div id = "footer">
 		<p>Final project for CS 4701 Spring 2017. Jake Podell and Jack Solon.</p>
 	</div>
